test/users/engin/sparse_bulk/sparseBulkBoundsCheck.good
sparseBulkBoundsCheck.chpl:19: error: halt reached - Sparse domain/array index out of bounds
